--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   data-toggle="collapse" data-target=".navbar-main-collapse">
             <i class="fa fa-bars"></i>
           </button>
-          <a class="navbar-brand page-scroll" href="https://bamos.github.io/reading-list">
+          <a class="navbar-brand page-scroll" href="https://coffeemike.github.io/reading-list">
             <i class="fa fa-book"></i>  <span class="light">Reading</span> List
           </a>
         </div>
@@ -68,7 +68,7 @@
                 This is freely hosted with
                 <a href="https://pages.github.com/" target="_blank">Github Pages</a>.<br>
                 The source is available on GitHub at
-                <a href="https://github.com/bamos/reading-list" target="_blank">bamos/reading-list</a> and<br>
+                <a href="https://github.com/coffeemike/reading-list" target="_blank">coffeemike/reading-list</a> and<br>
                 includes instructions for making your own.
               </p>
               <p>
